--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,20 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:textSize="22sp"
+        android:text="@string/number"
         android:gravity="center" />
+
+
+    <TextView
+        android:id="@+id/txt_bind_status"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:textSize="18sp"
+        android:text="@string/unbound_status"
+        android:gravity="center" />
+
+
 
     <Button
         android:id="@+id/btn_start_service"
